kernel/tests/macros/schema_with_invalid_field_type.rs
extern crate delta_kernel_derive;
use delta_kernel_derive::Schema;
use syn::Token;

mod actions;
mod schema;

#[derive(Schema)]
pub struct WithMacro {
    token: Token![struct],
}

fn main() {}
